cifar10-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cifar10-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "8m"  
spec:
  rules:
  - host: tarry.cifar10.local        # 你自定义的域名
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cifar10-service   # 必须与 Service 名一致
            port:
              number: 80
